--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
      <title>To Do List</title>
-     <link rel="stylesheet" type="text/css" href="CSS/app.css">
+     <link rel="stylesheet" type="text/css" href="app.css">
      <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
      <script src="https://code.jquery.com/jquery-3.5.1.min.js"
           integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
           </script>
-     <script type="text/javascript" src="JavaScript/todo.js"></script>
+     <script type="text/javascript" src="todo.js"></script>
 </body>
 
 </html>
